sandbox/output
StringCalculator.java:7: error: cannot find symbol
            if (numbers.contains(SPARATOR)) {
                                 ^
  symbol:   variable SPARATOR
  location: class StringCalculator
StringCalculator.java:8: error: cannot find symbol
                String[] numberArray = numbers.split(SPARATOR);
                                                     ^
  symbol:   variable SPARATOR
  location: class StringCalculator
2 errors
